# cuarena

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: test-build.yml
examples/: benchmark.cu  usage.cu
include/cuarena/: allocator.cuh  color.hpp  constants.hpp  cuarena.cuh  definitions.cuh  logger.hpp  sysinfo.hpp  types.hpp
src/: allocator.cu  sysinfo.cpp
tests/: test.cu
